<resources>
    <string name="app_name">CinepolisAPI</string>


    <!--- LOGIN -->
    <string name="login">Iniciar sesión</string>
    <string name="email">Usuario</string>
    <string name="password">Contraseña</string>
    
    <!-- Home menu -->
    <string name="perfil">Perfil</string>
    <string name="cartelera">Cartelera</string>
    <string name="complejo">Complejo</string>

    <!-- Profile -->
    <string name="bienvenido">Bienvenido:</string>
    <string name="username">Nombre de usuario:</string>
    <string name="correo">Correo electronico:</string>
    <string name="card">Tarjeta</string>


</resources>