<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.profile.ProfileFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <include
           android:id="@+id/toolbar_include"
           layout="@layout/toolbar"/>

       <androidx.constraintlayout.widget.Guideline
           android:id="@+id/gd_left"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           app:layout_constraintGuide_percent="0.05"/>

       <androidx.constraintlayout.widget.Guideline
           android:id="@+id/gd_bottom"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           app:layout_constraintGuide_percent="0.95"/>

       <androidx.constraintlayout.widget.Barrier
           android:id="@+id/barrier_fields"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:constraint_referenced_ids="layout_titles"
           android:orientation="vertical"
           app:barrierDirection="right"
           />


       <ImageView
           android:id="@+id/icon_person"
           android:layout_width="80dp"
           android:layout_height="80dp"
           android:src="@drawable/ic_profile"
           app:layout_constraintTop_toBottomOf="@id/toolbar_include"
            app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:tint="@color/white" />

       <TextView
           android:id="@+id/tv_welcome"
           style="@style/textview_subtitle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/bienvenido"
           app:layout_constraintTop_toBottomOf="@id/icon_person"
           app:layout_constraintStart_toStartOf="@id/gd_left"
           />

       <LinearLayout
           android:id="@+id/layout_titles"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/tv_welcome"
           app:layout_constraintStart_toStartOf="@id/gd_left"
           android:orientation="vertical"
           android:layout_marginTop="10dp"
           >

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/username"
               style="@style/textview_normal"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/correo"
               style="@style/textview_normal"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/card"
               style="@style/textview_normal"
               />



       </LinearLayout>

       <LinearLayout
           android:id="@+id/layout_fields"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toEndOf="@id/barrier_fields"
           app:layout_constraintTop_toTopOf="@id/layout_titles"
           android:orientation="vertical"
           >


           <TextView
               android:id="@+id/tv_email"
               android:layout_marginStart="20dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               tools:text="davidxd"
               style="@style/textview_normal"
               />

           <TextView
               android:id="@+id/tv_username"
               android:layout_marginStart="20dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               tools:text="David Cruz Ramirez"
               style="@style/textview_normal"
               />

           <TextView
               android:id="@+id/tv_card"
               android:layout_marginStart="20dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               tools:text="davoh.dev@gmail.com"
               style="@style/textview_normal"
               />


       </LinearLayout>



   </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:visibility="gone"
        android:id="@+id/loader"
        layout="@layout/loader"/>






</androidx.constraintlayout.widget.ConstraintLayout>